syntax = "proto3";

package auth;

option go_package = "./api";

service AuthService {
	rpc Register (RegisterRequest) returns (RegisterResponse);
	rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
	string email = 1;
	string password = 2;
}

message RegisterResponse {
	string user_id = 1;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string access_token = 1;
}